Switch from LinkedList to ArrayList.
It should be better in almost all circumstances. It is very uncommon to
insert into middle of lists as part of serialization and
deserialization, so it should have some speed benefit, but probably not
huge.